[新增] Linux系统Jenkins Docker Compose部署 [新增] Linux系统Nginx Docker Compose部署 [新增] Docker文档结构 [新增] Nginx文档结构 [修改] 部分描述改为英文

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>文档</title>
+  <title>Documents</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="多方向的经验记录">
   <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
@@ -14,7 +14,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '文档',
+      name: 'Documents',
       loadSidebar: true,
       subMaxLevel: 2
     }
