--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" /> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sushantrahate/docsify-darkly-theme/css/darkly.min.css" />
+    <style>
+      .markdown-section {
+        max-width: 80% !important;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
