--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-docker.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1/components/prism-json5.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-python.min.js"></script>
   </body>
 </html>
