--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-json5.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-python.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-java.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-batch.min.js"></script>
   </body>
 </html>
