--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" /> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/sushantrahate/docsify-darkly-theme/css/darkly.min.css" />
+    <link rel="stylesheet" href="libs/darkly.min.css" />
     <style>
       .markdown-section {
         max-width: 80% !important;
@@ -32,17 +32,17 @@
       };
     </script>
     <!-- Docsify v4 -->
-    <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-    <script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-bash.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-yaml.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-nginx.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-docker.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-json.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-json5.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-python.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-java.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/prismjs@1.23.0/components/prism-batch.min.js"></script>
+    <script src="libs/docsify@4.js"></script>
+    <script src="libs/docsify-copy-code.js"></script>
+    <script src="libs/search.min.js"></script>
+    <script src="libs/prism-bash.min.js"></script>
+    <script src="libs/prism-yaml.min.js"></script>
+    <script src="libs/prism-nginx.min.js"></script>
+    <script src="libs/prism-docker.min.js"></script>
+    <script src="libs/prism-json.min.js"></script>
+    <script src="libs/prism-json5.min.js"></script>
+    <script src="libs/prism-python.min.js"></script>
+    <script src="libs/prism-java.min.js"></script>
+    <script src="libs/prism-batch.min.js"></script>
   </body>
 </html>
