[修改] 代码高亮库更新

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
     <script src="libs/prism-batch.min.js"></script>
     <script src="libs/prism-c.min.js"></script>
     <script src="libs/prism-cpp.min.js"></script>
+    <script src="libs/prism-powershell.min.js"></script>
   </body>
 </html>
