[修改] 系统设计 专用存储范式 [修改] 首页 增加 cypher 语法高亮

--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
     <script src="libs/prism-cpp.min.js"></script>
     <script src="libs/prism-powershell.min.js"></script>
     <script src="libs/prism-sql.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.26.0/components/prism-cypher.min.js"></script>
   </body>
 </html>
