[修改] 首页js文件异步加载

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
     <!-- Docsify v4 -->
     <script src="libs/docsify.min.js"></script>
     <script src="libs/docsify-copy-code.min.js"></script>
-    <script defer="true" src="libs/search.min.js"></script>
-    <script defer="true" src="libs/prism-bash.min.js"></script>
-    <script defer="true" src="libs/prism-yaml.min.js"></script>
-    <script defer="true" src="libs/prism-nginx.min.js"></script>
-    <script defer="true" src="libs/prism-docker.min.js"></script>
-    <script defer="true" src="libs/prism-json.min.js"></script>
-    <script defer="true" src="libs/prism-json5.min.js"></script>
-    <script defer="true" src="libs/prism-python.min.js"></script>
-    <script defer="true" src="libs/prism-java.min.js"></script>
-    <script defer="true" src="libs/prism-batch.min.js"></script>
-    <script defer="true" src="libs/prism-c.min.js"></script>
-    <script defer="true" src="libs/prism-cpp.min.js"></script>
-    <script defer="true" src="libs/prism-powershell.min.js"></script>
-    <script defer="true" src="libs/prism-sql.min.js"></script>
-    <script defer="true" src="https://cdn.jsdelivr.net/npm/prismjs@1.26.0/components/prism-cypher.min.js"></script>
+    <script src="libs/search.min.js"></script>
+    <script async="true" src="libs/prism-bash.min.js"></script>
+    <script async="true" src="libs/prism-yaml.min.js"></script>
+    <script async="true" src="libs/prism-nginx.min.js"></script>
+    <script async="true" src="libs/prism-docker.min.js"></script>
+    <script async="true" src="libs/prism-json.min.js"></script>
+    <script async="true" src="libs/prism-json5.min.js"></script>
+    <script async="true" src="libs/prism-python.min.js"></script>
+    <script async="true" src="libs/prism-java.min.js"></script>
+    <script async="true" src="libs/prism-batch.min.js"></script>
+    <script async="true" src="libs/prism-c.min.js"></script>
+    <script async="true" src="libs/prism-cpp.min.js"></script>
+    <script async="true" src="libs/prism-powershell.min.js"></script>
+    <script async="true" src="libs/prism-sql.min.js"></script>
+    <script async="true" src="https://cdn.jsdelivr.net/npm/prismjs@1.26.0/components/prism-cypher.min.js"></script>
   </body>
 </html>
