[修改] 切换依赖库为国内 CDN

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Documents" />
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css" /> -->
-    <link rel="stylesheet" href="libs/theme-simple-dark.css" />
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/themes/vue.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/themes/dark.min.css" rel="stylesheet">
     <style>
       .markdown-section {
         max-width: 80% !important;
@@ -32,22 +32,23 @@
       };
     </script>
     <!-- Docsify v4 -->
-    <script src="libs/docsify.min.js"></script>
-    <script src="libs/docsify-copy-code.min.js"></script>
-    <script src="libs/search.min.js"></script>
-    <script async="true" src="libs/prism-bash.min.js"></script>
-    <script async="true" src="libs/prism-yaml.min.js"></script>
-    <script async="true" src="libs/prism-nginx.min.js"></script>
-    <script async="true" src="libs/prism-docker.min.js"></script>
-    <script async="true" src="libs/prism-json.min.js"></script>
-    <script async="true" src="libs/prism-json5.min.js"></script>
-    <script async="true" src="libs/prism-python.min.js"></script>
-    <script async="true" src="libs/prism-java.min.js"></script>
-    <script async="true" src="libs/prism-batch.min.js"></script>
-    <script async="true" src="libs/prism-c.min.js"></script>
-    <script async="true" src="libs/prism-cpp.min.js"></script>
-    <script async="true" src="libs/prism-powershell.min.js"></script>
-    <script async="true" src="libs/prism-sql.min.js"></script>
-    <script async="true" src="https://cdn.jsdelivr.net/npm/prismjs@1.26.0/components/prism-cypher.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/docsify.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/plugins/search.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/docsify-copy-code/2.1.1/docsify-copy-code.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-bash.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-yaml.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-nginx.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-docker.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json5.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-python.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-java.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-batch.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-c.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cpp.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-powershell.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-sql.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cypher.min.js"></script>
+    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-markdown.min.js"></script>
   </body>
 </html>
