--- a/index.html
+++ b/index.html
@@ -31,24 +31,23 @@
         subMaxLevel: 2,
       };
     </script>
-    <!-- Docsify v4 -->
     <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/docsify.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/plugins/search.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/docsify-copy-code/2.1.1/docsify-copy-code.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-bash.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-yaml.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-nginx.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-docker.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json5.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-python.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-java.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-batch.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-c.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cpp.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-powershell.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-sql.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cypher.min.js"></script>
-    <script async="true" src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-markdown.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-bash.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-yaml.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-nginx.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-docker.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-json5.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-python.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-java.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-batch.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-c.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cpp.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-powershell.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-sql.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-cypher.min.js"></script>
+    <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-markdown.min.js"></script>
   </body>
 </html>
