[修改] 暗色主题下代码展示效果调整

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/themes/vue.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/themes/dark.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/themes/dark.min.css" rel="stylesheet" />
     <style>
       .markdown-section {
-        max-width: 80% !important;
+        max-width: 80%;
+      }
+      .markdown-section tr:nth-child(2n) {
+        background-color: #505050;
+      }
+      .markdown-section pre > code {
+        color: #b7b7b7;
+      }
+      .token.punctuation {
+        color: #b0b0b0;
       }
     </style>
   </head>
