--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         subMaxLevel: 2,
       };
     </script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/docsify.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/docsify/4.12.2/plugins/search.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify@4.12.2/lib/docsify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsify@4.12.2/lib/plugins/search.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/docsify-copy-code/2.1.1/docsify-copy-code.min.js"></script>
     <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-bash.min.js"></script>
     <script async src="https://cdn.bootcdn.net/ajax/libs/prism/1.27.0/components/prism-yaml.min.js"></script>
