--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/components/prism-cypher.min.js"></script>
     <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/components/prism-markdown.min.js"></script>
     <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/components/prism-groovy.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.28.0/components/prism-php.min.js"></script>
   </body>
 </html>
