--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="zh-cn">
   <head>
     <meta charset="UTF-8" />
-    <title>Documents</title>
+    <title>Learning records</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Documents" />
+    <meta name="author" content="Stillemenschen" />
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="Knowledge records on the way of programming learning" />
+    <meta name="keywords" content="Technical reference on algorithms, system design, Python programming, and Linux tools" />
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/docsify@4.12.2/themes/vue.min.css" rel="stylesheet"> -->
@@ -28,7 +31,7 @@
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: "Documents",
+        name: "Learning records",
         search: {
           placeholder: "输入以搜索",
           depth: 2,
