feat: 免去外部CDN下载

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/docsify@4.13.0/themes/vue.min.css" rel="stylesheet"> -->
-    <link href="https://cdn.jsdelivr.net/npm/docsify@4.13.0/themes/dark.min.css" rel="stylesheet" />
+    <link href="/static/css/dark.min.css" rel="stylesheet" />
     <style>
       .markdown-section {
         max-width: 80%;
@@ -43,24 +43,24 @@
         subMaxLevel: 2,
       };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/docsify@4.13.0/lib/docsify.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/docsify@4.13.0/lib/plugins/search.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/docsify-copy-code@2.1.1/dist/docsify-copy-code.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-bash.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-yaml.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-nginx.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-docker.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-json.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-json5.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-python.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-java.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-batch.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-c.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cpp.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-sql.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cypher.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-markdown.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-groovy.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-php.min.js"></script>
+    <script src="/static/js/docsify.min.js"></script>
+    <script src="/static/js/search.min.js"></script>
+    <script src="/static/js/docsify-copy-code.min.js"></script>
+    <script async src="/static/js/prism-bash.min.js"></script>
+    <script async src="/static/js/prism-yaml.min.js"></script>
+    <script async src="/static/js/prism-nginx.min.js"></script>
+    <script async src="/static/js/prism-docker.min.js"></script>
+    <script async src="/static/js/prism-json.min.js"></script>
+    <script async src="/static/js/prism-json5.min.js"></script>
+    <script async src="/static/js/prism-python.min.js"></script>
+    <script async src="/static/js/prism-java.min.js"></script>
+    <script async src="/static/js/prism-batch.min.js"></script>
+    <script async src="/static/js/prism-c.min.js"></script>
+    <script async src="/static/js/prism-cpp.min.js"></script>
+    <script async src="/static/js/prism-sql.min.js"></script>
+    <script async src="/static/js/prism-cypher.min.js"></script>
+    <script async src="/static/js/prism-markdown.min.js"></script>
+    <script async src="/static/js/prism-groovy.min.js"></script>
+    <script async src="/static/js/prism-php.min.js"></script>
   </body>
 </html>
