chore: 相对路径访问静态资源

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/docsify@4.13.0/themes/vue.min.css" rel="stylesheet"> -->
-    <link href="/static/css/dark.min.css" rel="stylesheet" />
+    <link href="./static/css/dark.min.css" rel="stylesheet" />
     <style>
       .markdown-section {
         max-width: 80%;
@@ -43,28 +43,28 @@
         subMaxLevel: 2,
       };
     </script>
-    <script src="/static/js/docsify.min.js"></script>
-    <script src="/static/js/search.min.js"></script>
-    <script src="/static/js/docsify-copy-code.min.js"></script>
+    <script src="./static/js/docsify.min.js"></script>
+    <script src="./static/js/search.min.js"></script>
+    <script src="./static/js/docsify-copy-code.min.js"></script>
     <script>
       function loadScript() {
         const scriptUrls = [
-          "/static/js/prism-bash.min.js",
-          "/static/js/prism-yaml.min.js",
-          "/static/js/prism-nginx.min.js",
-          "/static/js/prism-docker.min.js",
-          "/static/js/prism-json.min.js",
-          "/static/js/prism-json5.min.js",
-          "/static/js/prism-python.min.js",
-          "/static/js/prism-java.min.js",
-          "/static/js/prism-batch.min.js",
-          "/static/js/prism-c.min.js",
-          "/static/js/prism-cpp.min.js",
-          "/static/js/prism-sql.min.js",
-          "/static/js/prism-cypher.min.js",
-          "/static/js/prism-markdown.min.js",
-          "/static/js/prism-groovy.min.js",
-          "/static/js/prism-php.min.js",
+          "./static/js/prism-bash.min.js",
+          "./static/js/prism-yaml.min.js",
+          "./static/js/prism-nginx.min.js",
+          "./static/js/prism-docker.min.js",
+          "./static/js/prism-json.min.js",
+          "./static/js/prism-json5.min.js",
+          "./static/js/prism-python.min.js",
+          "./static/js/prism-java.min.js",
+          "./static/js/prism-batch.min.js",
+          "./static/js/prism-c.min.js",
+          "./static/js/prism-cpp.min.js",
+          "./static/js/prism-sql.min.js",
+          "./static/js/prism-cypher.min.js",
+          "./static/js/prism-markdown.min.js",
+          "./static/js/prism-groovy.min.js",
+          "./static/js/prism-php.min.js",
         ];
         const doc = document;
         const parent = doc.body;
